Fix script path
Fix script path

--- a/examples/browser-test.html
+++ b/examples/browser-test.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title>optparse.js example</title>
-		<script type="text/javascript" charset="utf-8" src="../src/optparse.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../lib/optparse.js"></script>
 		<script>
 			// Arguments to be passed to the parser
 			var ARGS = ['-p', 'This is a message', '-i', 'test.html', '--debug'];
